Fixed footer-logo alignment.

--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ footer{
 .footer-logo img{
     width: 100px;
     height: 100px;
+    justify-content: center;
 }
 
 .footer-section img{
